Add Twitter env variables via fiagro gem; Femove old comments

--- a/app/views/fetchers/show.html.erb
+++ b/app/views/fetchers/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= @tweets.count %> tweets!</h1>
+
+<h1><%= @fetcher.username %> has <%= @tweets.count %> tweets!</h1>
 <p> <%= @latest %></p>
-
-<p>
-  <strong>Username:</strong>
-  <%= @fetcher.username %>
-</p>
-
 
 <%= link_to 'Edit', edit_fetcher_path(@fetcher) %> |
 <%= link_to 'Back', fetchers_path %>
