Add link back to wwwoodall

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <p>by <a href="<%= app_path %>">wwwoodall</a></p>
+  <%= yield %>
 </body>
 </html>
