--- a/app/views/fetchers/_form.html.erb
+++ b/app/views/fetchers/_form.html.erb
@@ -12,10 +12,9 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :username %><br>
-    <%= f.text_field :username %>
+    <%= f.text_field :username, placeholder: 'enter a username' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'get tweets' %>
   </div>
 <% end %>
