create Banner Presenter #OOP
1. Testing
Q - how do I work with mock data? 
Q - How do I use eliminate the duplicate mock data?
Q - How do I use mocks? (p.id is returning [])

2. Inheritance

- I recognize it looks like i’ve pre-optimized, but I started building a FooterPresenter and noticed I needed similar methods so I just moved them to twitter_parser.rb

Q - The twitter_parser.rb methods were private when I had them in Banner_Parser. Should they stay that way or should I test them?

3. Presenter
Q - how does it look in the controller?

4. Fetchers#Show
Q - lots of variables. is that a problems?

--- a/app/views/fetchers/show/_banner.html.erb
+++ b/app/views/fetchers/show/_banner.html.erb
@@ -1,11 +1,17 @@
-<div class='banner'>
-  <div class="image">
-    <%= image_tag 'http://pbs.twimg.com/media/B9xs-vFCAAAeFNJ.jpg' %>
-    <div class='username'>
-      <%= @fetcher.username %>
+<% if @banner_text.nil? %>
+  <!-- _dw TODO put somthing about tweet with a #b to get a  -->
+  <h1>Doah, tweet something and add a #b to it. Like so, </h1>
+  <blockquote class="twitter-tweet" lang="en"><p>What if your tweets could create a webpage about you? <a href="https://twitter.com/hashtag/b?src=hash">#b</a></p>&mdash; HashPageMe (@HashPageMe) <a href="https://twitter.com/HashPageMe/status/591638710841516032">April 24, 2015</a></blockquote> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<% else %>
+  <div class='banner'>
+    <div class="image">
+      <%= image_tag @banner_image %>
+      <div class='username'>
+        <%= @fetcher.username %>
+      </div>
+    </div>
+    <div class="text">
+      <%= @banner_text %>
     </div>
   </div>
-  <div class="text">
-    Son, this is excite bike. http://t.co/4exlXLY1WLY
-  </div>
-</div>
+<% end %>
