Remove code from Spike.

--- a/app/views/fetchers/show/_content_popular.html.erb
+++ b/app/views/fetchers/show/_content_popular.html.erb
@@ -1,9 +1,3 @@
 <section class='content-container'>
-  <% if @retweets.count > 0 %>
-    <% @retweets.each do |tweet| %>
-      <%= render partial: 'partials/tweet', locals: {tweet: tweet} %>
-    <% end %>
-  <% else %>
-    <p>Hmm.. doesn't look like anyone has retweeted any of <%= @fetcher.username %>'s tweets.</p>
-  <% end %>
+<h1>coming soon.</h1>
 </section>
