--- a/app/views/fetchers/show/_footer.html.erb
+++ b/app/views/fetchers/show/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class='footer'>
   <div class="text">
-    Son, this is excite bike. http://t.co/4exlXLY1WLY
+    This is a static tweet. But soon it will be here from #f
   </div>
   <div class="image">
     <%= image_tag 'http://pbs.twimg.com/media/B9xs-vFCAAAeFNJ.jpg' %>
