--- a/app/views/fetchers/show/_sidebar.html.erb
+++ b/app/views/fetchers/show/_sidebar.html.erb
@@ -5,9 +5,7 @@
     <hr>
     <div class="trends">
       <ul>
-      <% @trends.each do |trend| %>
-        <li><%= link_to trend, "https://twitter.com/search?q=%23#{trend}%20from%3A#{@fetcher.username}&src=typd&vertical=default&f=tweets", target: '_blank' %></li>
-      <% end %>
+        <li>coming soon</li>
       </ul>
     </div>
   </section>
