Edit landing page

--- a/app/views/fetchers/new.html.erb
+++ b/app/views/fetchers/new.html.erb
@@ -1,5 +1,53 @@
-<h1>HashPage</h1>
-
+<%= image_tag 'logo.gif' %>
+<h1>Make a webpage from hashtags</h1>
 <%= render 'form' %>
 
-<%= link_to 'Back', fetchers_path %>
+<!-- _dw style instructions -->
+<!-- <section class='instructions'>
+  <div class="layout">
+    <h2>Layout sections</h2>
+    <div class="example-tweet">
+    </div>
+    <ul>
+      <li>#b is for banner</li>
+      <li>#p is for picture</li>
+      <li>#f is for footer</li>
+    </ul>
+  </div>
+  <div class="content">
+    <h2>Adding Content</h2>
+    <div class="example-tweet">
+    </div>
+    <h3>#h + #subject</h3>
+    <p>Add an #h and whatever subject you want to categorize them with.</p>
+  </div>
+  <div class="fonts">
+    <h2>Fonts</h2>
+    <div class="example-tweet">
+    </div>
+    <h3>Pick your font</h3>
+    <p>Font options include:</p>
+    <ul>
+      <li>#serif</li>
+      <li>#sanserif</li>
+      <li>#block</li>
+      <li>#script</li>
+      <li>#fun</li>
+    </ul>
+  </div>
+  <div class="colors">
+    <h2>Colors</h2>
+    <div class="example-tweet">
+    </div>
+    <p>If you have one color, it will be background. If you have 2, the second is for fonts</p>
+    <h3>Hex as Hash</h3>
+    <p>Hex values are a type of color code.</p>
+    <h3>Examples</h3>
+    <ul>
+      <li>#eee - gray</li>
+      <li>#blue - blue</li>
+      <li>#red - red</li>
+    </ul>
+  </div>
+</section>
+ -->
