Update landing page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,5 +5,7 @@
 @import "modules/sidebar";
 @import "modules/content";
 @import "modules/footer";
+@import "modules/landing";
+@import "modules/vertical_tabs";
 
 @import 'layouts/containers'
