--- a/app/views/fetchers/_form.html.erb
+++ b/app/views/fetchers/_form.html.erb
@@ -12,9 +12,9 @@
   <% end %>
 
   <div class="field">
-    <%= f.text_field :username, placeholder: 'enter a username' %>
+    <%= f.text_field :username, placeholder: "ex. 'wwwoodall'" %>
   </div>
   <div class="actions">
-    <%= f.submit 'get tweets' %>
+    <%= f.submit 'view' %>
   </div>
 <% end %>
