--- a/app/views/fetchers/show.html.erb
+++ b/app/views/fetchers/show.html.erb
@@ -1,5 +1,14 @@
 <%# TODO add a loading button %>
 <!-- _dw TODO create a greeting presenter -->
-<div class="">
-  <%= render partial: 'fetchers/show/banner' %>
-</div>
+<nav>
+  <div class="logo">
+    <%= image_tag 'logo.gif' %>
+  </div>
+  <div class="from">
+    <%= render 'form' %>
+  </div>
+  <ul>
+    <li><a href="http://www.hashpage.me" title="home">home</a></li>
+  </ul>
+</nav>
+<%= render partial: 'fetchers/show/banner' %>
