Make adding banner tweet example a bit easier.

--- a/app/assets/stylesheets/modules/_banner.scss
+++ b/app/assets/stylesheets/modules/_banner.scss
@@ -46,3 +46,14 @@
     }
   }
 }
+
+.no-tweets {
+  margin-top: 3em;
+  padding: 3em;
+  border: 1px solid #DADADA;
+  background: #F8F8F8;
+  border-radius: 5px;
+  h1 { margin: 0 0 1em 0; }
+  h2 { margin: 1em 0 0 0; }
+  .b { color: #FF4D1D; }
+}
