--- a/app/views/fetchers/show/_banner.html.erb
+++ b/app/views/fetchers/show/_banner.html.erb
@@ -1,11 +1,6 @@
 <% if @banner.nil? %>
   <div class="l-container no-tweets">
-  <!-- _dw TODO put somthing about tweet with a #b to get a  -->
-  <h1>Doah, You need to add a <span class='b'>#b</span> to a tweet. Like so... </h1>
-  <a href="https://twitter.com/share" class="twitter-share-button" data-text="A smooth sea never made a skilled mariner #b" data-size="large" data-count="none">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-  <h2>(Then, just refresh this page.)</h2>
-  <p>Pro tip: tweet an image with a <span class='b'>#b</span> for a photo on your banner.</p>
+    <%= render partial: 'fetchers/show/banner_no_tag' %>
   </div>
 <% else %>
   <div class='banner'>
